feature(zames) rm browserify

--- a/package.json
+++ b/package.json
@@ -20,22 +20,20 @@
   ],
   "scripts": {
     "test": "tape test/*.js",
+    "coverage": "nyc npm test",
+    "lint": "eslint lib test",
+    "report": "nyc report --reporter=text-lcov | coveralls",
+    "build": "redrun clean 6to5 legacy:*",
+    "6to5": "babel -d legacy/lib lib",
+    "wisdom": "npm run build",
+    "clean": "rimraf legacy/*",
     "watcher": "nodemon -w test -w lib --exec",
     "watch:test": "npm run watcher -- npm test",
-    "watch:coverage": "npm run watcher -- npm run coverage",
-    "lint": "eslint lib test",
-    "build": "redrun clean init 6to5 legacy:* bundle bundle:es6 minify",
-    "init": "mkdirp dist legacy",
-    "minify": "minify dist/zames.js > dist/zames.min.js",
-    "wisdom": "npm run build",
-    "clean": "rimraf legacy dist",
-    "bundle:base": "browserify -s zames --ng false",
-    "bundle": "npm run bundle:base -- -r ./legacy/lib/zames.js:zames ./legacy/lib/zames.js -o dist/zames.js",
-    "bundle:es6:base": "npm run bundle:base -- -r ./lib/zames.js:zames ./lib/zames.js",
-    "bundle:es6": "npm run bundle:es6:base -- -o dist/zames.es6.js",
-    "coverage": "nyc npm test",
-    "report": "nyc report --reporter=text-lcov | coveralls",
-    "6to5": "buble lib -o legacy/lib",
+    "watch:lint": "npm run watcher -- 'npm run lint'",
+    "watch:tape": "nodemon -w test -w lib --exec tape",
+    "watch:coverage:base": "npm run watcher -- nyc npm test",
+    "watch:coverage:tape": "npm run watcher -- nyc tape",
+    "watch:coverage": "bin/redrun.js watch:coverage:base",
     "legacy:index": "echo \"module.exports = require('./lib/zames');\" > legacy/index.js"
   },
   "dependencies": {
@@ -44,12 +42,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^16.0.0",
-    "buble": "^0.19.2",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "coveralls": "^3.0.0",
     "eslint": "^4.0.0",
-    "minify": "^3.0.0",
-    "mkdirp": "^0.5.1",
     "nodemon": "^1.11.0",
     "nyc": "^11.0.2",
     "redrun": "^6.0.0",
